--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -30,8 +30,6 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:layout_marginTop="8dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/toolbar_admin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +66,8 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/ic_search" />
+                    android:src="@drawable/ic_search"
+                    android:contentDescription="@string/desc_search_icon" />
 
                 <EditText
                     android:id="@+id/et_search"
@@ -85,6 +84,7 @@
                     android:id="@+id/btn_refresh"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
+                    android:contentDescription="@string/desc_refresh_reports"
                     app:icon="@drawable/ic_refresh"
                     app:iconGravity="textStart"
                     app:iconPadding="0dp"
@@ -107,7 +107,8 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/ic_filter" />
+                    android:src="@drawable/ic_filter"
+                    android:contentDescription="@string/desc_filter_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -161,6 +162,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:contentDescription="@string/desc_admin_actions"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_more_vert" />
