--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,5 @@
     <color name="estado_pendiente">#FFE066</color>     <!-- Amarillo -->
     <color name="estado_proceso">#74C0FC</color>       <!-- Azul claro -->
     <color name="estado_completado">#8CE99A</color>    <!-- Verde -->
-
+    <color name="estado_falso">#FF0000</color>
 </resources>
