--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="darkSecondary">#1E1E1E</color>
 
     <color name="gray_700">#616161</color>
+    <color name="gray">#616161</color>
 
     <!-- Nuevo color para el fondo de la lista/pantalla -->
     <color name="background_light_gray">#F5F5F5</color>
