--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -16,7 +16,9 @@
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="Panel de Administración"
+        app:subtitle="Radio de cobertura: 25 km"
         app:titleTextColor="@android:color/white"
+        app:subtitleTextColor="#CCFFFFFF"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
